Bump versions, add Python to Dockerfile